# Excuse-Generator

./: .gitignore  README.md  main.py  pyproject.toml
src/app/: app.py  config.py  frontend.py  openai_client.py  schemas.py
src/app/services/: excuse_generator.py  excuse_service.py  plausibility_grader.py
